--- a/templates/app1/divs.html
+++ b/templates/app1/divs.html
@@ -2,7 +2,8 @@
 
     <ul class="nav nav-sidebar">
     {% for c in divs %}
-        <li><a href="#">{{ c.title }}</a></li>
+        <li><a href="{% url 'division_detail' c.slug %}">{{ c.title }}</a></li>
+        <hr>
     {% endfor %}
 {% else %}
     <li> <strong >There are no Division present.</strong></li>
