--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,10 +1,12 @@
-{% extends "app1/base.html" %}
+{% extends 'app1/base.html' %}
+
 
 {% block body_block %}
 <h1>Register Here</h1>
         <form method="post" action=".">
                 {% csrf_token %}
                 {{ form.as_p }}
+
                 <input type="submit" value="Submit" />
         </form>
 {% endblock %}
