--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -1,37 +1,43 @@
 {% extends 'app1/base.html' %}
 
 
+
+
 {% block body_block %}
-
     <h1>Welcome {{ user.username }}</h1>
-
-
     <h1>Trending places ---  </h1>
+
     {% if page_list %}
 
     {% for obj in page_list %}
 
-        <div class="card" style="width: 20rem;">
+        <div class="card" style="width: 20rem;">)
 
-            <img class="card-img-top" src="{{ obj.images.url }}" alt="IMAGE GOES HERE">
+            {% for obj2 in obj.images %}
+                <img class="card-img-top" src="{{  }}" alt="IMAGE GOES HERE">
+            {% endfor %}
+
+            <h1>this page has {{ obj.images }} images </h1>
                   <div class="card-block">
                     <h4 class="card-title">{{ obj.name }}</h4>
                     <p class="card-text">{{ obj.des }}</p>
                     <a href="#" class="btn btn-primary">View Details</a>
                   </div>
-            {% if user.is_authenticated %}
+
+            <!--
+             if user.is_authenticated
                           <p>
-                                <strong id="like_count">{{ obj.likes }}</strong> people like this category
-                                        <button id="likes" data-catid="{{obj.id}}" class="btn btn-primary" type="button">
+                                <strong id="like_count">   obj.likes     </strong> people like this category
+                                        <button id="likes" data-catid=" obj.id  " class="btn btn-primary" type="button">
                                         <span class="glyphicon glyphicon-thumbs-up"></span>
                                         Like
                                         </button>
                           </p>
-                  {% endif %}
+                 endif
+            -->
         </div>
         <hr>
     {% endfor %}
-
 
      {% else %}
             <br>
