--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -8,12 +8,50 @@
     <h1>Trending places ---  </h1>
     {% if page_list %}
 
+
+
+
+
+
     {% for page in page_list %}
         <div class="card" style="width: 20rem;">
-            {% for image_obj in page.pages.all %}
-                    <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE">
+            <div class="container">
+                <br>
+                  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
-                    {% endfor %}
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                      {% for image_obj in page.pages.all %}
+
+                          {% if forloop.first %}
+
+                                      <div class="item active">
+                                    <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="460" height="345">
+                                   </div>
+                        {% else %}
+                               <div class="item">
+                                    <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="460" height="345">
+                                </div>
+                          {% endif %}
+                          {% endfor %}
+                    </div>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+            </div>
+
+
+
+
+
 
                   <div class="card-block">
                     <h4 class="card-title">{{ page.name }}</h4>
