--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -5,17 +5,49 @@
 
              {% if division %}
             <h1>{{ division_name_name }}</h1>
-                {% if pages %}
+                {% if page_list %}
                 <ul>
-                    {% for page in pages %}
-                   <li>
-                            <a href="{% url 'goto' %}?page_id={{page.id}}">{{ page.name }}</a>
-                        {% if page.views > 1 %}
-                            ({{ page.views }} views)
-                            {% elif page.views == 1 %}
-                            ({{ page.views }} view)
-                        {% endif %}
-                    </li>
+                    {% for page in page_list %}
+                        <div class="card-block">
+                                        <div class="container">
+                                            <br>
+                                              <div id="myCarousel" class="carousel slide" data-ride="carousel" style=" width: 950px">
+
+
+                                                <!-- Wrapper for slides -->
+                                                <div class="carousel-inner" role="listbox">
+                                                  {% for image_obj in page.pages.all %}
+
+                                                      {% if forloop.first %}
+
+                                                                  <div class="item active">
+                                                                <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="100" height="345">
+                                                               </div>
+                                                    {% else %}
+                                                           <div class="item">
+                                                                <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="400" height="345">
+                                                            </div>
+                                                      {% endif %}
+                                                      {% endfor %}
+                                                </div>
+                                                <!-- Left and right controls -->
+                                                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                                                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                                  <span class="sr-only">Previous</span>
+                                                </a>
+                                                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                                  <span class="sr-only">Next</span>
+                                                </a>
+                                              </div>
+                                        </div>
+
+                                                <h4 class="card-title">{{ page.name }}</h4>
+                                                <p class="card-text">{{ page.des }}</p>
+                                                <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary">ViewDetails</a>
+                                              </div>
+                        </div>
+                        <hr>
                     {% endfor %}
                 </ul>
                 {% else %}
@@ -26,7 +58,6 @@
 
                   {% endif %}
           {% else %}
-            The specified division {{ division_name}} does not exist!
+            The specified division->{{ division_name}} does not exist!
             {% endif %}
-
 {% endblock %}
