--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -3,9 +3,15 @@
 
 {% block body_block %}
 
+                  {% if user.is_authenticated %}
+                     <a href="/app1/{{ division_name_slug }}/add_page/">Add a New page to the Division</a>
+
+                  {% endif %}
              {% if division %}
             <h1>{{ division_name_name }}</h1>
-                {% if page_list %}
+
+
+                 {% if page_list %}
                 <ul>
                     {% for page in page_list %}
                         <div class="card-block">
@@ -53,10 +59,6 @@
                 {% else %}
                     <strong>No pages currently in Division.</strong>
                 {% endif %}
-                  {% if user.is_authenticated %}
-                     <a href="/app1/{{ division_name_slug }}/add_page/">Add a New page to the Category</a>
-
-                  {% endif %}
           {% else %}
             The specified division->{{ division_name}} does not exist!
             {% endif %}
