--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -15,13 +15,8 @@
 
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <style>
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
@@ -65,7 +60,8 @@
               <li><a href="{% url 'index' %}">Home</a></li>
               {% if user.is_authenticated %}
 
-                      <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
+                        <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
+                        <li><a href="http://127.0.0.1:8000/admin/">Admin</a></li>
                         <li><a href="{% url 'auth_logout' %}?next=/app1/">Logout</a></li>
 
               {% else %}
@@ -84,7 +80,8 @@
         <div class="col-sm-3 col-md-2 sidebar">
                 {% block side_block %}
 
-                    {% get_division_list %}
+                 {% get_division_list  %}
+
 
                 {% endblock %}
 
