--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -5,61 +5,79 @@
 
                   {% if user.is_authenticated %}
                      <a href="/app1/{{ division_name_slug }}/add_page/">Add a New page to the Division</a>
-
                   {% endif %}
              {% if division %}
-            <h1>{{ division_name_name }}</h1>
+                <h1>{{ division_name_name }}</h1>
 
-
-                 {% if page_list %}
+                 {% if pages_list %}
                 <ul>
-                    {% for page in page_list %}
-                        <div class="card-block">
-                                        <div class="container">
-                                            <br>
-                                              <div id="myCarousel" class="carousel slide" data-ride="carousel" style=" width: 950px">
+                    {% for page in pages_list %}
 
 
-                                                <!-- Wrapper for slides -->
-                                                <div class="carousel-inner" role="listbox">
-                                                  {% for image_obj in page.pages.all %}
 
-                                                      {% if forloop.first %}
 
-                                                                  <div class="item active">
-                                                                <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="100" height="345">
-                                                               </div>
-                                                    {% else %}
-                                                           <div class="item">
-                                                                <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="400" height="345">
-                                                            </div>
-                                                      {% endif %}
-                                                      {% endfor %}
-                                                </div>
-                                                <!-- Left and right controls -->
-                                                <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-                                                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                                  <span class="sr-only">Previous</span>
-                                                </a>
-                                                <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-                                                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                                  <span class="sr-only">Next</span>
-                                                </a>
-                                              </div>
-                                        </div>
 
-                                                <h4 class="card-title">{{ page.name }}</h4>
-                                                <p class="card-text">{{ page.des }}</p>
-                                                <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary">ViewDetails</a>
-                                              </div>
-                        </div>
-                        <hr>
+                                <div class="card" style="width: 20rem;">
+              <div class="card-block">
+            <div class="container">
+                <br>
+                  <div id="myCarousel{{ forloop.counter }}" class="carousel slide" data-ride="carousel" style="width: 950px;">
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                      {% for image_obj in page.pages.all %}
+
+                          {% if forloop.first %}
+                              <div class="item active">
+                                    <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="400" height="345">
+                              </div>
+                          {% else %}
+                               <div class="item">
+                                    <img class="card-img-top" src="{{ image_obj.pic.url }}" alt="IMAGE GOES HERE",width="400" height="345">
+                                </div>
+                          {% endif %}
+
+                      {% endfor %}
+                    </div>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+            </div>
+
+                    <h4 class="card-title">{{ page.name }}</h4>
+                    <p class="card-text">{{ page.des }}</p>
+                    <a href="{% url 'story' page.division page.slug %}" class="btn btn-primary">ViewDetails</a>
+                  </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <hr>
                     {% endfor %}
-                </ul>
-                {% else %}
+
+                 {% else %}
                     <strong>No pages currently in Division.</strong>
                 {% endif %}
-          {% else %}
-            The specified division->{{ division_name}} does not exist!
+            {% else %}
+                The specified division->{{ division_name}} does not exist!
             {% endif %}
 {% endblock %}
