--- a/templates/app1/index.html
+++ b/templates/app1/index.html
@@ -18,7 +18,7 @@
               <div class="card-block">
             <div class="container">
                 <br>
-                  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="width: 950px;">
+                  <div id="myCarousel{{ forloop.counter }}" class="carousel slide" data-ride="carousel" style="width: 950px;">
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" role="listbox">
                       {% for image_obj in page.pages.all %}
@@ -36,11 +36,11 @@
                       {% endfor %}
                     </div>
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                    <a class="left carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="prev">
                       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                    <a class="right carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="next">
                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -55,8 +55,6 @@
         <hr>
 
     {% endfor %}
-
-
      {% else %}
             <br>
              <h2><strong>Looks like people are not going Anywhere!</strong></h2>
