--- a/templates/app1/story.html
+++ b/templates/app1/story.html
@@ -1,26 +1,38 @@
 {% extends 'app1/base.html' %}
 
 {% block body_block %}
-    {% if stories %}
-        <h3>Total {{ stories.count }} stories shared ! </h3>
-           {% for obj in stories %}
 
+    <a href="{% url 'story_share' division page %}"class="btn btn-primary">Share Your Tour Story</a>
+    {% if stories %}
+
+        <h3>Total {{ stories.count }} stories shared ! </h3><br>
+            {% for obj in stories %}
+
+                <h3>{{ forloop.counter }}</h3>>
+                <ul>
+                <li class="card-title">USER: {{ obj.user }}</li> <br>
+                <li  class="card-title">TITLE: {{ obj.title_name }}</li> <br>
+                <li class="card-title">Member: {{ obj.member }}</li> <br>
+                <li class="card-text">DESCRIPTION: {{ obj.des }}</li> <br>
+                </ul>>
              <div class="card" style="width: 20rem;">
                 <div class="card-block">
                 <div class="container">
                 <br>
                   <div id="myCarousel{{ forloop.counter }}" class="carousel slide" data-ride="carousel" style="width: 950px;">
                     <!-- Wrapper for slides -->
-                    {{ forloop.counter }}
+
                     <div  class="carousel-inner" role="listbox">
-                     {% for obj2 in  image_list.all %}
-                         {% if obj2.user == obj.user %}
-                                    <div class="item active">
-                                        <img class="card-img-top" src="{{ obj2.pic.url }}" alt="IMAGE GOES HERE",width="400" height="345">
-                                     </div>
-                            {% endif %}
-                      {% endfor %}
-                     </div>
+                        {% if obj.stories %}
+                        {% for obj2 in  obj.stories.all %}
+                         <div class="item {% if forloop.first %}active{% endif %}">
+                             <img class="card-img-top" src="{{ obj2.file.url }}" alt="IMAGE GOES HERE",width="400" height="345">
+                         </div>
+                        {% endfor %}
+                        {% else %}
+                        <h3>No images Shared by the user </h3>
+                        {% endif %}
+                    </div>
                     <!-- Left and right controls -->
                     <a class="left carousel-control" href="#myCarousel{{ forloop.counter }}" role="button" data-slide="prev">
                       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -33,9 +45,7 @@
                   </div>
             </div>
 
-                    <h4 class="card-title">{{ obj.user}}</h4>
-                    <p class="card-text">{{ obj.story_page }}</p>
-                    <a href="" class="btn btn-primary">ViewDetails</a>
+                    <a href="" class="btn btn-primary">View Tour Details</a>
                   </div>
         </div>
 
