--- a/templates/app1/base.html
+++ b/templates/app1/base.html
@@ -1,5 +1,5 @@
 {% load app1_extras %}
-
+{% load static %}
  <!DOCTYPE html>
 
 <html lang="en">
@@ -11,21 +11,18 @@
     <meta name="author" content="">
     <link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>BDTM - {% block title %}BDTM{% endblock %}</title>
+    <title>BDTM - {% block title %}Home{% endblock %}</title>
 
+  <!--
     <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+      -->
+
+      <link rel="stylesheet" type="text/css" href="{% static 'app1/CSS/bootstrap_cerulean.css' %}" />
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-      <style>
-  .carousel-inner > .item > img,
-  .carousel-inner > .item > a > img {
-      width: 70%;
-      margin: auto;
-  }
-  </style>
-
-
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
       {% load staticfiles %}
@@ -61,7 +58,7 @@
               {% if user.is_authenticated %}
 
                         <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
-                        <li><a href="http://127.0.0.1:8000/admin/">Admin</a></li>
+                        <li><a href="http://127.0.0.1:8000/admin/">{{ user.username }}</a></li>
                         <li><a href="{% url 'auth_logout' %}?next=/app1/">Logout</a></li>
 
               {% else %}
@@ -77,7 +74,7 @@
     <div class="container-fluid">
       <div class="row">
 
-        <div class="col-sm-3 col-md-2 sidebar">
+        <div class="col-sm-3 col-md-1 sidebar">
                 {% block side_block %}
 
                  {% get_division_list  %}
