--- a/templates/app1/story_share.html
+++ b/templates/app1/story_share.html
@@ -2,15 +2,15 @@
 
 
 {% block body_block %}
-                <form role="form"  id="story_form" method="post" action="" enctype="multipart/form-data" >
+                <form  role="form"  id="story_form" method="post" action="" enctype="multipart/form-data" >
                     {% csrf_token %}
                     {% for hidden in form.hidden_fields %}
                         {{ hidden }}
                     {% endfor %}
                     {% for field in form.visible_fields %}
-                        <p class="required">{{ field.help_text }}</p><br/>
-                        {{ field }} <hr>
+                        <p class="required">{{ field.help_text }}</p>
                         {{ field.errors }}
+                        {{ field }}
                     {% endfor %}
              <hr>
             <button class="btn btn-primary" type="submit" name="submit">Submit</button>
