--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,16 +2,15 @@
 
 {% block body_block %}
 
-<link href="http://getbootstrap.com/examples/signin/signin.css" rel="stylesheet">
-
-<form class="form-signin" role="form" method="post" action=".">
+<form class="form-horizontal" role="form" method="post" action=".">
 {% csrf_token %}
 
-<h2 class="form-signin-heading">Please sign in</h2>
-<input class="form-control" placeholder="Username" id="id_username" maxlength="254" name="username" type="text" required autofocus=""/>
-<input type="password" class="form-control" placeholder="Password" id="id_password" name="password"  required />
+<h2 class="">Please sign in</h2>
+<input class="form-control" placeholder="Username" id="id_username"name="username" type="text" required autofocus=""/>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Submit" >Sign in</button>
-        </form>
+    <input type="password" class="form-control" placeholder="Password" id="id_password" name="password"  required />
+
+        <button class="btn btn-primary" type="submit" value="Submit" >Sign in</button>
+</form>
 
 {% endblock %}
